Added test dir and video_downloader class

--- a/discord_gif_maker_bot/build.gradle
+++ b/discord_gif_maker_bot/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -24,6 +25,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
     compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'com.github.sealedtx:java-youtube-downloader:3.1.0'
 }
 
 tasks.named('test') {
